2011-09-19  Miloslav Trmač  <mitr@redhat.com>

	* Makefile.am (noinst_LIBRARIES): Replace libuh-dialogs.a and
	libuh-wrap.a with a single liblib.a.
	(userinfo_LDADD, usermount_LDADD, userpasswd_LDADD)
	(consolehelper_gtk_LDADD, test_userdialog_LDADD): Use liblib.a instead
	of libuh-wrap.a and libuh-dialogs.a.
	(liblib_a_SOURCES, liblib_a_CPPFLAGS): New definitions, replacing...
	(libuh_wrap_a_SOURCES, libuh_wrap_a_CPPFLAGS)
	(libuh_dialogs_a_SOURCES): ... these removed definitions.

2011-09-17  Miloslav Trmač  <mitr@redhat.com>

	* Makefile.am (noinst_LIBRARIES, libuh_wrap_a_SOURCES)
	(libuh_wrap_a_CPPFLAGS, libuh_dialogs_a_SOURCES): Define new convenience
	libraries to avoid duplicate compliation.
	(userinfo_SOURCES, userinfo_LDADD, usermount_SOURCES)
	(usermount_LDADD, userpasswd_SOURCES, userpasswd_CPPFLAGS)
	(userpasswd_LDADD, consolehelper_gtk_SOURCES)
	(consolehelper_gtk_CPPFLAGS, consolehelper_gtk_LDADD)
	(test_userdialog_SOURCES, test_userdialog_LDADD): Use the convenience
	libraries.
	* configure.ac: Invoke AC_PROG_RANLIB.

2011-06-28  Miloslav Trmač  <mitr@redhat.com>

	* usermount.c (build_mountinfo_list): Don't crash when /etc/fstab can't
	be opened.

	* usermount.c (format): Use GtkComboBoxText instead of deprecated
	gtk_combo_box_new_text() and gtk_combo_box_append_text().

	* configure.ac: Update minimum GTK+ version.

2011-03-31  Miloslav Trmač  <mitr@redhat.com>

	* NEWS: Fix a spectacular typo.

	* configure.ac: Release 1.107.
	* NEWS: Update.
	* po/*: Update.
	* po/LINGUAS: Update.

	* Makefile.am (all-local, $(srcdir)/po/usermode.pot): Remove, this
	breaks (make distcheck).

2011-03-13  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (converse_console): Check return value of
	get_pam_string_item ().
	(converse_pipe): Handle NULL from read_reply when all responses were
	received.
	* shvar.c (svWriteFile): Check return value of dup(), don't truncate
	the file if dup() fails.  (Note that this code is not used.)
