@@ -4,6 +4,7 @@ dummy.h
 gsmclient.c
 pam-panel-icon.c
 userdialogs.h
+userhelper-messages.c
 userhelper-wrap.c
 userhelper.c
 userhelper.h
